<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>cloud</artifactId>
    <description>A Spring Cloud Project.</description>
    <groupId>cc.xiaoxu</groupId>
    <name>cloud</name>
    <packaging>pom</packaging>
    <version>1.0</version>

    <modules>
        <module>cloud-base</module>
        <module>cloud-api</module>
        <module>cloud-api-aggregation</module>
        <module>cloud-gateway</module>
    </modules>

    <properties>
        <!-- 内置 -->
        <cloud.version>1.0</cloud.version>
        <java.version>21</java.version>
        <project.encoding>UTF-8</project.encoding>

        <!-- mvn 参数-->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>

        <!-- 打包相关参数 -->
        <jib-maven-plugin.version>3.3.2</jib-maven-plugin.version>
        <spring-boot-maven-plugin.version>3.1.1</spring-boot-maven-plugin.version>
        <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>

        <!-- 镜像仓库信息 -->
        <env.namespace>?</env.namespace>
        <env.image.warehouse.url>?</env.image.warehouse.url>

        <!-- 镜像仓库鉴权信息 -->
        <env.image.warehouse.username>?</env.image.warehouse.username>
        <env.image.warehouse.password>?</env.image.warehouse.password>

        <!-- MySQL 鉴权信息 -->
        <env.api.mysql.host>localhost</env.api.mysql.host>
        <env.api.mysql.port>3306</env.api.mysql.port>
        <env.api.mysql.username>root</env.api.mysql.username>
        <env.api.mysql.password>root</env.api.mysql.password>

        <!-- redis 鉴权信息 -->
        <env.api.redis.host>localhost</env.api.redis.host>
        <env.api.redis.port>6379</env.api.redis.port>
        <env.api.redis.password>password</env.api.redis.password>
        <env.api.redis.database>0</env.api.redis.database>

        <!-- JVM 设置 -->
        <env.jvm.xms>-Xms256m</env.jvm.xms>
        <env.jvm.xmx>-Xmx256m</env.jvm.xmx>

        <!-- nacos -->
        <env.nacos.server>127.0.0.1:8848</env.nacos.server>
        <env.nacos.username>nacos</env.nacos.username>
        <env.nacos.password>nacos</env.nacos.password>

        <!-- spring -->
        <spring-boot-dependencies.version>3.2.4</spring-boot-dependencies.version>
        <spring-cloud.version>2023.0.0</spring-cloud.version>
        <spring-cloud-alibaba.version>2023.0.0.0-RC1</spring-cloud-alibaba.version>
        <spring-cloud-starter-gateway.version>4.1.1</spring-cloud-starter-gateway.version>
        <!-- [版本说明](https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E) -->
        <spring-cloud-starter-alibaba-nacos-discovery.version>2023.0.0.0-RC1
        </spring-cloud-starter-alibaba-nacos-discovery.version>
        <mybatis-spring-boot-starter.version>3.0.3</mybatis-spring-boot-starter.version>
        <mybatis-plus-boot-starter.version>3.5.5</mybatis-plus-boot-starter.version>

        <!-- 工具类相关 -->
        <lombok.version>1.18.32</lombok.version>
        <commons-lang3.version>3.14.0</commons-lang3.version>
        <commons-beanutils.version>1.9.4</commons-beanutils.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <fastjson2.version>2.0.46</fastjson2.version>

        <!-- 文档 -->
        <springdoc-openapi-starter-webmvc-ui.version>2.4.0</springdoc-openapi-starter-webmvc-ui.version>
        <swagger-annotations-jakarta.version>2.2.21</swagger-annotations-jakarta.version>

        <!-- MySQL -->
        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 内部依赖 -->
            <dependency>
                <groupId>cc.xiaoxu</groupId>
                <artifactId>cloud-base-mysql</artifactId>
                <version>${cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.xiaoxu</groupId>
                <artifactId>cloud-base-redis</artifactId>
                <version>${cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.xiaoxu</groupId>
                <artifactId>cloud-base-spring</artifactId>
                <version>${cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.xiaoxu</groupId>
                <artifactId>cloud-base-utils</artifactId>
                <version>${cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.xiaoxu</groupId>
                <artifactId>cloud-api-file</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <!-- lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- 工具类 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commons-beanutils.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>

            <!-- spring-boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- SpringCloud 微服务 -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- SpringCloud Ali -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!--mysql-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector-java.version}</version>
            </dependency>
            <!-- mybatis -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring-boot-starter.version}</version>
            </dependency>
            <!-- mybatis-plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus-boot-starter.version}</version>
            </dependency>

            <!-- 文档 -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>${swagger-annotations-jakarta.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 仓库 -->
    <repositories>
        <!-- maven.org 中央仓库 -->
        <repository>
            <id>maven-repo</id>
            <name>maven repo</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <!-- aliyun -->
        <repository>
            <id>aliyun-public</id>
            <name>aliyun public</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>aliyun-central</id>
            <name>aliyun central</name>
            <url>https://maven.aliyun.com/repository/central</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <!-- Spring -->
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>${build-helper-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>